// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`testResponseJsonBody should add test for json body 1`] = `
[
  "// Validate if response has JSON Body 
pm.test("[GET]::/crm/companies/:id - Response has JSON Body", function () {
    pm.response.to.have.jsonBody();
});
",
]
`;

exports[`testResponseJsonBody should add test with separator symbol for json body 1`] = `
[
  "// Validate if response has JSON Body 
pm.test("[GET]==/crm/companies/:id - Response has JSON Body", function () {
    pm.response.to.have.jsonBody();
});
",
]
`;
